--- a/Changes
+++ b/Changes
@@ -3,6 +3,9 @@ Revision history for ZMQ-Raw
 {{$NEXT}}
 
  - CURVE socket options can now be set
+ - Socket->recv() no longer accepts a size parameter
+ - Socket->recv() and Socket->send() now return undef if the ZQM_DONTWAIT flag is
+ used and the operation cannot be completed
 
 0.04      2017-10-12 15:30:21+02:00 Africa/Johannesburg
 
