--- a/Changes
+++ b/Changes
@@ -2,9 +2,15 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Added Message methods:
+    + clone()
+ - Socket->sendmsg() now copies the message, leaving it valid for subsequent calls
+ - Socket->sendmsg() can now also work with scalars
+ - Socket->recv() now returns all message-parts in list context (as scalars)
+
 0.07      2017-10-17 14:54:55+02:00 Africa/Johannesburg
 
- - Socket->recvmsg() now returns all message-parts in list context
+ - Socket->recvmsg() now returns all message-parts in list context (as objects)
  - Socket->sendmsg() can now send an array of message-parts
 
 0.06      2017-10-17 08:59:02+02:00 Africa/Johannesburg
