--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Poller->add() now also accepts perl sockets
+
 0.08      2017-10-18 10:59:58+02:00 Africa/Johannesburg
 
  - Added Message methods:
