--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Restore perl 5.8 and 5.10 compatibility
+
 0.09      2017-10-19 15:43:22+02:00 Africa/Johannesburg
 
  - Poller->add() now also accepts perl sockets
