--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for ZMQ-Raw
 
  - Try and get the SunPRO compiler working Solaris
  - Documentation improvements
+ - Update to libzmq cb266ee07
 
 0.10      2017-10-20 15:50:14+02:00 Africa/Johannesburg
 
