--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Revert C++ changes, they do more harm than good.
+
 0.11      2017-10-24 17:41:12+02:00 Africa/Johannesburg (TRIAL RELEASE)
 
  - Try and get the SunPRO compiler working Solaris
