--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Fix a potential destruction order deadlock problem
+
 0.19      2017-11-29 07:13:35+02:00 Africa/Johannesburg
 
  - Added Loop::Event methods:
