--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,7 @@
-0MQ version 4.2.3 stable, released on 20xx/xx/xx
+0MQ version 4.2.4 stable, released on 20xx/xx/xx
+================================================
+
+0MQ version 4.2.3 stable, released on 2017/12/13
 ================================================
 
 * API change: previously ZMQ_POLLOUT on a ZMQ_ROUTER socket returned always
@@ -234,6 +237,8 @@
   the default value is -1 (infinite). It never was 30 second in any released
   version, it was only changed briefly and then changed back, but the manpage
   was not reverted.
+
+* Fixed #2861 - CMake/MSVC: export ZMQ_STATIC when needed.
 
 0MQ version 4.2.2 stable, released on 2017/02/18
 =============================================
