--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for ZMQ-Raw
 {{$NEXT}}
 
  - Improved Poll implementation
+ - Update to libzmq 21927a74d
 
 0.21      2017-12-07 10:38:29+02:00 Africa/Johannesburg
 
