--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Scaling of timers has been improved
+
 0.22      2018-01-12 15:15:28+02:00 Africa/Johannesburg
 
  - Improved Poll implementation
