--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Update to libzmq 2dfdcaff2
+ - A C++11/14 compatible compiler is now required to build libzmq
+
 0.24      2018-02-20 09:46:49+02:00 Africa/Johannesburg
 
  - Perl threading fixes.
