--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Update to libzmq 1bb0d63f1
+
 0.26      2018-07-10 13:22:10+02:00 Africa/Johannesburg
 
  - Circular reference fixes.
