--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Update to libzmq 546f8e7205
+
 0.27      2018-11-20 10:10:28+02:00 Africa/Johannesburg
 
  - Update to libzmq 1bb0d63f1
