--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Loop::Timer now has an on_cancel callback.
+
 0.28      2018-12-14 12:49:23+02:00 Africa/Johannesburg
 
  - Update to libzmq 546f8e7205
