--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Timer's intervals is now atleast 10ms.
+ - Update to libzmq bd6fa4bbb
+
 0.29      2019-01-17 10:44:29+00:00 Europe/London
 
  - Loop::Timer now has an on_cancel callback.
