--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for ZMQ-Raw
 
 {{$NEXT}}
 
+ - Update to libzmq 9dcbdd1b09
+
 0.35      2019-05-20 11:02:49+01:00 Europe/London
 
  - Update to libzmq 6b51f03377
