Squashed 'deps/libzmq/' changes from c7e99cdc4..3c13e9222
3c13e9222 Merge pull request #3851 from gummif/gfa/ts-int
e1fc84141 Problem: ZMQ_THREAD_SAFE is not bool
323420c5e Merge pull request #3850 from JSYoo5B/git-ignore-fix-track
eceaaf360 Problem: executable sources are not tracked
876d4bfea Merge pull request #3849 from ferdnyc/zeromq-config-install
a97158aa2 Add relicensing statement for ferdnyc
31569c78d Problem: CMake config doesn't support multiarch
bb9135da4 Merge pull request #3847 from JSYoo5B/protocol-literals-refactor
38fd1fdc8 Problem: some cond. compile may cause problem
4f436ce00 Problem: some conditional compile was not applied
ebd22ecf8 Problem: literals protocol names still remains
0c7ee438a Merge pull request #3848 from JSYoo5B/optimize-gitignore
2478887d4 Problem: gitignore is messed up
656205b5f Merge pull request #3844 from bluca/format
f9417dab4 Problem: msg_t functions do not respect coding style
07d368762 Merge pull request #3843 from JSYoo5B/man-udp-not-mentioned
ded0d83e4 Problem: wildcard address with udp not mentioned
296beecd2 Problem: UDP is not mentioned in bind and connect
f91597165 Merge pull request #3838 from JSYoo5B/osx-build-doc-issue
87f9e377d Problem: building on OS X may failed
2206cb37e ip_resolver_t: Silencing C++-warning -Wnon-virtual-dtor (#3837)
de0102e92 Fixes old Simon being in there
99cf1c2e9 Fixes tabs
c0abfae0d Add relicense
0d4292919 Adds QNX as possible to compile on
e765143b4 Merge pull request #3833 from bluca/news
4f45ac135 Problem: formatting not up to date
09476b3d7 Problem: NEWS out of date with latest changes
e2de3b798 Problem: no NEWS entry for ZMQ_RECONNECT_STOP
debbe08fb add option to stop trying to reconnect on ECONNREFUSED (#3831)
66ee3ee46 Merge pull request #3832 from stac47/fix_unused_variable
f0b0e80da Fix unused-variable warning in perf/proxy_thr.cpp

git-subtree-dir: deps/libzmq
git-subtree-split: 3c13e9222d0c5d0b16fed955a20fc7cf7d6de37a

--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,10 @@
   - ZMQ_ONLY_FIRST_SUBSCRIBE will cause only the first part of a multipart
     message to be processed as a subscribe/unsubscribe message, and the rest
     will be forwarded as user data to the application.
+  - ZMQ_RECONNECT_STOP will cause a connecting socket to stop trying to
+    reconnect in specific circumstances. In this release, this can be set to
+    ECONNREFUSED errors, which implies the other end is not listening on the
+    requested port.
   See doc/zmq_setsockopt.txt and doc/zmq_getsockopt.txt for details.
 
 * New DRAFT (see NEWS for 4.2.0) zmq_ctx_get_ext/zmq_ctx_set_ext APIs were added
@@ -28,6 +32,13 @@
   WSS requires the GnuTLS library for TLS support. ZMQ_WSS_ specific socket
   options were added to support TLS.
   WebSockets support is disabled by default if DRAFT APIs are disabled.
+
+* New DRAFT (see NEWS for 4.2.0) socket type, PEER, which is thread safe and a
+  related zmq_connect_peer function which atomically and thread-safely connects
+  and returns a routing-id.
+
+* ZMTP 3.1 is now fully implemented, and 3.1 peers will receive subscribe/cancel
+  on PUB/SUB via commands rather than using the first byte of the payload.
 
 * Fixed #3566 - malformed CURVE message can cause memory leak
 
@@ -100,6 +111,11 @@
 
 * Fixed #3778 - fix documentation of zmq_poller's thread safety
 
+* Fixed #3792 - do not allow creation of new sockets after zmq_ctx_shutdown
+
+* Fixed #3805 - improve performance of CURVE by reducing copies
+
+* Fixed #3814 - send subscribe/cancel as commands to ZMTP 3.1 peers
 
 0MQ version 4.3.2 stable, released on 2019/07/08
 ================================================
